# pagerank-aggregator

./: Dockerfile  pyproject.toml
src/: main.py
tests/: test_main.py
